fix image overflow bug

--- a/v2.0/src/assets/css/style.css
+++ b/v2.0/src/assets/css/style.css
@@ -9589,7 +9589,7 @@ button.as-link:hover {
 .one-team-image {
   width: auto;
   height: auto;
-  max-width: 160px;
+  max-width: 100%;
   max-height: 70px;
   margin: auto;
   display: block;
